增加从excel文本读取数据功能
加入SQLite数据库，利用AsyncTask在第一次运行程序时从excel文本中异步加载数据（能加载8000数据），产生的db文件用于下一个版本将数据库与程序一起捆绑发布。

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -8,8 +8,9 @@
 		<item>期权Delta值</item>
 	</string-array>
 	<string-array name="array2">
-		<item>认购期权</item>
-		<item>认沽期权</item>
+	    <item>空</item>
+		<item>认购</item>
+		<item>认沽</item>
 		<item>股票</item>
 	</string-array>
 	<string-array name="array3">
