--- a/res/layout/derivative.xml
+++ b/res/layout/derivative.xml
@@ -37,22 +37,6 @@
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
-        <ImageButton
-            android:id="@+id/derivative_clean_bn"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerInParent="true"
-            android:layout_marginRight="6dip"
-            android:background="@drawable/btn_common_selector" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="12dp"
-            android:text="清空" />
     </RelativeLayout>
 
     <ScrollView
@@ -62,325 +46,52 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:orientation="vertical"
             android:paddingLeft="8dp"
-            android:paddingRight="8dp" >
+            android:paddingRight="8dp"
+            android:paddingTop="5dp" > 
 
-            <Spinner
-                android:id="@+id/derivative_spinner1"
+            <Button
+                android:id="@+id/derivative_Button1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:entries="@array/array1"
-                android:prompt="@string/tip" />
-
-            <LinearLayout
-                android:id="@+id/derivative_layout1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <RadioGroup
-                    android:id="@+id/derivative_radioGroup1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal" >
-
-                    <RadioButton
-                        android:layout_width="110dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="认购期权理论价格"
-                        android:textColor="@android:color/black" />
-
-                    <RadioButton
-                        android:layout_width="110dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="认沽期权理论价格"
-                        android:textColor="@android:color/black" />
-                </RadioGroup>
-
-                <TableLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/shape" >
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="5dp" >
-
-                        <TextView
-                            android:layout_width="90dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:padding="5dp"
-                            android:text="标的资产的价格"
-                            android:textColor="@android:color/black"
-                            android:textSize="16sp" />
-
-                        <EditText
-                            android:layout_width="70dp"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:padding="5dp"
-                            android:text="行权价格"
-                            android:textColor="@android:color/black"
-                            android:textSize="16sp" />
-
-                        <EditText
-                            android:layout_width="70dp"
-                            android:layout_height="wrap_content" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="5dp" >
-
-                        <TextView
-                            android:layout_width="90dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:padding="5dp"
-                            android:text="标的资产价格波动率"
-                            android:textColor="@android:color/black"
-                            android:textSize="16sp" />
-
-                        <EditText
-                            android:layout_width="70dp"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:padding="5dp"
-                            android:text="到期期限"
-                            android:textColor="@android:color/black"
-                            android:textSize="16sp" />
-
-                        <EditText
-                            android:layout_width="70dp"
-                            android:layout_height="wrap_content" />
-                    </TableRow>
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="5dp" >
-
-                        <TextView
-                            android:layout_width="90dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:padding="5dp"
-                            android:text="年利率"
-                            android:textColor="@android:color/black"
-                            android:textSize="16sp" />
-
-                        <EditText
-                            android:layout_width="70dp"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:id="@+id/derivative_presentValue_tv1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:padding="5dp"
-                            android:text="现价"
-                            android:textColor="@android:color/black"
-                            android:textSize="16sp" />
-
-                        <EditText
-                            android:id="@+id/derivative_presentValue_et1"
-                            android:layout_width="70dp"
-                            android:layout_height="wrap_content" />
-                    </TableRow>
-                </TableLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/derivative_layout2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="gone" >
-
-                <RadioGroup
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/shape"
-                    android:orientation="horizontal" >
-
-                    <RadioButton
-                        android:layout_width="110dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="多头"
-                        android:textColor="@android:color/black" />
-
-                    <RadioButton
-                        android:layout_width="110dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="空头"
-                        android:textColor="@android:color/black" />
-                </RadioGroup>
-
-                <RadioGroup
-                    android:id="@+id/derivative_radioGroup2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/shape"
-                    android:orientation="vertical" >
-
-                    <RadioButton
-                        android:id="@+id/derivative_radioButton1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="认购期权到期收益分布"
-                        android:textColor="@android:color/black" />
-
-                    <RadioButton
-                        android:id="@+id/derivative_radioButton2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="认沽期权到期收益分布"
-                        android:textColor="@android:color/black" />
-
-                    <RadioButton
-                        android:id="@+id/derivative_radioButton3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="股票到期收益分布"
-                        android:textColor="@android:color/black" />
-                </RadioGroup>
-
-                <TableLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/shape" >
-
-                    <TableRow
-                        android:id="@+id/derivative_tableRow1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="5dp" >
-
-                        <TextView
-                            android:layout_width="90dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:padding="5dp"
-                            android:text="标的资产到期价格"
-                            android:textColor="@android:color/black"
-                            android:textSize="16sp" />
-
-                        <EditText
-                            android:layout_width="70dp"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:padding="5dp"
-                            android:text="行权价格"
-                            android:textColor="@android:color/black"
-                            android:textSize="16sp" />
-
-                        <EditText
-                            android:layout_width="70dp"
-                            android:layout_height="wrap_content" />
-                    </TableRow>
-
-                    <TableRow
-                        android:id="@+id/derivative_tableRow2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="5dp" >
-
-                        <TextView
-                            android:layout_width="90dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:padding="5dp"
-                            android:text="股票到期价格"
-                            android:textColor="@android:color/black"
-                            android:textSize="16sp" />
-
-                        <EditText
-                            android:layout_width="70dp"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:padding="5dp"
-                            android:text="股票价格"
-                            android:textColor="@android:color/black"
-                            android:textSize="16sp" />
-
-                        <EditText
-                            android:layout_width="70dp"
-                            android:layout_height="wrap_content" />
-                    </TableRow>
-
-                    <TableRow
-                        android:id="@+id/derivative_tableRow3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="5dp" >
-
-                        <TextView
-                            android:layout_width="90dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:padding="5dp"
-                            android:text="期权权益金"
-                            android:textColor="@android:color/black"
-                            android:textSize="16sp" />
-
-                        <EditText
-                            android:layout_width="70dp"
-                            android:layout_height="wrap_content" />
-                    </TableRow>
-                </TableLayout>
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/loan_out_tv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/shape"
-                android:padding="8dp"
-                android:text="功能介绍：\n先选择还款方式，然后输入相应的数据就可以进行计算"
-                android:textColor="#1E90FF"
+                android:textColor="@android:color/black"
+                android:text="期权理论价格"
                 android:textSize="18sp" />
 
             <Button
-                android:id="@+id/loan_calculate_bt"
+                android:id="@+id/derivative_Button2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:padding="8dp"
-                android:text="计算"
+                android:layout_height="50dp"
+                android:text="期权到期收益"
                 android:textColor="@android:color/black"
                 android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/derivative_Button3"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textColor="@android:color/black"
+                android:text="期权组合损益分析"
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/derivative_Button4"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:textColor="@android:color/black"
+                android:text="保证金"
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/derivative_Button5"
+                android:layout_width="match_parent"
+                android:textColor="@android:color/black"
+                android:layout_height="50dp"
+                android:text="期权Delta值"
+                android:textSize="18sp" />
+       
         </LinearLayout>
     </ScrollView>
 
