--- a/res/layout/derivative1.xml
+++ b/res/layout/derivative1.xml
@@ -11,7 +11,7 @@
         android:background="@drawable/titlebar" >
 
         <ImageButton
-            android:id="@+id/finance_back_bn"
+            android:id="@+id/Button1_back_bn"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -33,13 +33,12 @@
             android:layout_centerInParent="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:text="个人理财"
+            android:text="期权理论价格"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
-        
-        
+
         <ImageButton
-            android:id="@+id/finance_clean_bn"
+            android:id="@+id/Button1_clean_bn"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -53,7 +52,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="12dp"
-            android:text="清空"/>
+            android:text="清空" />
     </RelativeLayout>
 
     <ScrollView
@@ -67,64 +66,36 @@
             android:paddingLeft="8dp"
             android:paddingRight="8dp" >
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:text="请选择计算类型："
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
-
             <RadioGroup
-                android:id="@+id/finance_RadioGroup"
+                android:id="@+id/Button1_radioGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:background="@drawable/shape"
                 android:orientation="horizontal" >
 
                 <RadioButton
-                    android:id="@+id/finance_RadioButton1"
-                    android:layout_width="70dip"
+                    android:id="@+id/Button1_radioButton1"
+                    android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="现值"
-                    android:textColor="@android:color/black" >
-                </RadioButton>
+                    android:text="认购期权理论价格"
+                    android:textColor="@android:color/black" />
 
                 <RadioButton
-                    android:id="@+id/finance_RadioButton2"
-                    android:layout_width="80dip"
+                    android:id="@+id/Button1_radioButton2"
+                    android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="年金现值"
-                    android:textColor="@android:color/black" >
-                </RadioButton>
-
-                <RadioButton
-                    android:id="@+id/finance_RadioButton3"
-                    android:layout_width="70dip"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="终值"
-                    android:textColor="@android:color/black" >
-                </RadioButton>
-
-                <RadioButton
-                    android:id="@+id/finance_RadioButton4"
-                    android:layout_width="80dip"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="年金终值"
-                    android:textColor="@android:color/black" >
-                </RadioButton>
+                    android:text="认沽期权理论价格"
+                    android:textColor="@android:color/black" />
             </RadioGroup>
 
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/shape" 
-                >
+                android:background="@drawable/shape" >
 
                 <TableRow
                     android:layout_width="match_parent"
@@ -132,141 +103,105 @@
                     android:paddingTop="5dp" >
 
                     <TextView
-                        android:id="@+id/finance_year_tv"
-                        android:layout_width="wrap_content"
+                        android:layout_width="90dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:padding="8dp"
-                        android:text="到期年限"
+                        android:padding="5dp"
+                        android:text="标的资产的价格"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
 
                     <EditText
-                        android:id="@+id/finance_year_et"
-                        android:layout_width="75dp"
+                        android:id="@+id/Button1_editText1"
+                        android:layout_width="70dp"
                         android:layout_height="wrap_content"
-                        android:inputType="number" />
+                        android:inputType="number|numberDecimal" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:padding="8dp"
+                        android:padding="5dp"
+                        android:text="行权价格"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp" />
+
+                    <EditText
+                        android:id="@+id/Button1_editText2"
+                        android:layout_width="65dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="number|numberDecimal" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:layout_width="91dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:padding="5dp"
+                        android:text="标的资产价格波动率"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp" />
+
+                    <EditText
+                        android:id="@+id/Button1_editText3"
+                        android:layout_width="65dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="number|numberDecimal" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:padding="5dp"
+                        android:text="到期期限"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp" />
+
+                    <EditText
+                        android:id="@+id/Button1_editText4"
+                        android:layout_width="70dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="number|numberDecimal" />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:padding="5dp"
                         android:text="年利率"
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
 
                     <EditText
-                        android:id="@+id/finance_rate_et"
-                        android:layout_width="75dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal" />
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/finance_annuity_tv"
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:padding="5dp"
-                        android:text="每年应收付金额"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-
-                    <EditText
-                        android:id="@+id/finance_annuity_et"
-                        android:layout_width="75dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal" />
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-
-                    <TextView
-                        android:id="@+id/finance_presentValue_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:padding="8dp"
-                        android:text="现值"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-
-                    <EditText
-                        android:id="@+id/finance_presentValue_et"
-                        android:layout_width="75dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal" />
-
-                    <TextView
-                        android:id="@+id/finance_finalValue_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:padding="8dp"
-                        android:text="终值"
-                        android:textColor="@android:color/black"
-                        android:textSize="16sp" />
-
-                    <EditText
-                        android:id="@+id/finance_finalValue_et"
-                        android:layout_width="75dp"
+                        android:id="@+id/Button1_editText5"
+                        android:layout_width="70dp"
                         android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal" />
                 </TableRow>
             </TableLayout>
 
-            <RadioGroup
-                android:id="@+id/period"
+            <TextView
+                android:id="@+id/Button1_out_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/shape"
-                android:orientation="horizontal" >
-                <TextView 
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:padding="8dp"
-                    android:text="年金周期:"
-                    android:textSize="16sp" 
-                    android:textColor="@android:color/black" />
-                <RadioButton
-                    android:id="@+id/finance_month_rb"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="每月"
-                    android:textColor="@android:color/black" />
-
-                <RadioButton
-                    android:id="@+id/finance_year_rb"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="每年"
-                    android:textColor="@android:color/black" />
-            </RadioGroup>
-
-            <TextView
-                android:id="@+id/finance_out_tv"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/shape"
                 android:padding="8dp"
-                android:text="功能介绍：\n先选择计算类型，然后输入相应的数据就可以进行计算"
+                android:text="功能介绍：\n先选择“认购期权理论价格”或者“认沽期权理论价格”，然后输入相应的数据就可以进行计算"
                 android:textColor="#1E90FF"
                 android:textSize="18sp" />
 
             <Button
-                android:id="@+id/finance_calculate_bt"
+                android:id="@+id/Button1_calculate_bt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
