完善期权计算、数据库与程序捆绑发布
完善期权计算的4个功能，分别是期权理论价格计算、保证金计算、Delta值计算、期权到期收益计算。将SQLite数据库与程序捆绑发布，大幅度地提高了效率，提高了用户体验。

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -31,7 +31,7 @@
             android:orientation="vertical"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:paddingTop="5dp" >
+             >
 
             <TextView
                 android:layout_width="match_parent"
@@ -48,33 +48,38 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="5dp"
                 android:text="个人理财"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/loanButton"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:text="贷款计算"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/investmentButton"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:text="投资指标"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/identificationButton"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:text="金融产品定价"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/derivativeButton"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginTop="5dp"
                 android:text="金融衍生品定价"
                 android:textSize="18sp" />
         </LinearLayout>
