--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -11,7 +11,7 @@
         android:background="@drawable/titlebar" >
 
         <ImageButton
-            android:id="@+id/derivative_back_bn"
+            android:id="@+id/about_back_bn"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -33,10 +33,9 @@
             android:layout_centerInParent="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:text="期权计算"
+            android:text="常见问题"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
-
     </RelativeLayout>
 
     <ScrollView
@@ -48,50 +47,16 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:paddingTop="5dp" > 
+            android:paddingRight="8dp" >
 
-            <Button
-                android:id="@+id/derivative_Button1"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="5dp"
-                android:textColor="@android:color/black"
-                android:text="期权理论价格"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/derivative_Button2"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:text="期权到期收益"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="常见问题："
                 android:textColor="@android:color/black"
                 android:textSize="18sp" />
 
-            <Button
-                android:id="@+id/derivative_Button3"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:textColor="@android:color/black"
-                android:text="期权组合损益分析"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/derivative_Button4"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:textColor="@android:color/black"
-                android:text="保证金"
-                android:textSize="18sp" />
-
-            <Button
-                android:id="@+id/derivative_Button5"
-                android:layout_width="match_parent"
-                android:textColor="@android:color/black"
-                android:layout_height="50dp"
-                android:text="期权Delta值"
-                android:textSize="18sp" />
-       
         </LinearLayout>
     </ScrollView>
 
