--- a/res/drawable-hdpi/sidebar_background.xml
+++ b/res/drawable-hdpi/sidebar_background.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"
   xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#99C60000" android:endColor="#99C60000" android:angle="90.0" />
+
+    <gradient
+        android:angle="90.0"
+        android:endColor="@android:color/darker_gray"
+        android:startColor="@android:color/darker_gray" />
     
     <corners
         android:topLeftRadius="8dip"
-        android:bottomLeftRadius="8dip"/>
+        android:bottomLeftRadius="8dip"
+        android:topRightRadius="8dip"
+        android:bottomRightRadius="8dip"/>
     
 </shape>
