--- a/res/layout/question.xml
+++ b/res/layout/question.xml
@@ -11,7 +11,7 @@
         android:background="@drawable/titlebar" >
 
         <ImageButton
-            android:id="@+id/about_back_bn"
+            android:id="@+id/question_back_bn"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -38,26 +38,12 @@
             android:textSize="20sp" />
     </RelativeLayout>
 
-    <ScrollView
+    <ListView
+        android:id="@+id/question_listview"
         android:layout_width="match_parent"
+        android:dividerHeight="1dp"
+        android:cacheColorHint="#00000000" 
         android:layout_height="match_parent" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:text="常见问题："
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
-
-        </LinearLayout>
-    </ScrollView>
+    </ListView>
 
 </LinearLayout>
