--- a/res/layout/derivative3.xml
+++ b/res/layout/derivative3.xml
@@ -100,7 +100,7 @@
                             android:textSize="16sp" />
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="50dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:padding="8dp"
@@ -109,7 +109,7 @@
                             android:textSize="16sp" />
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="50dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:padding="8dp"
@@ -118,16 +118,7 @@
                             android:textSize="16sp" />
 
                         <TextView
-                            android:layout_width="70dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:padding="8dp"
-                            android:text="股票到期价格"
-                            android:textColor="@android:color/black"
-                            android:textSize="16sp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="50dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:padding="8dp"
@@ -142,6 +133,7 @@
                         android:paddingTop="5dp" >
 
                         <Spinner
+                            android:id="@+id/Button3_spinner1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:entries="@array/array2"
@@ -149,6 +141,7 @@
                             android:prompt="@string/tip" />
 
                         <Spinner
+                            android:id="@+id/Button3_spinner2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@android:color/black"
@@ -156,20 +149,23 @@
                             android:prompt="@string/tip" />
 
                         <EditText
+                            android:id="@+id/Button3_et1"
+                            android:inputType="number|numberDecimal" 
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
                         <EditText
+                            android:id="@+id/Button3_et2"
+                            android:inputType="number|numberDecimal" 
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
                         <EditText
+                            android:id="@+id/Button3_et3"
+                            android:inputType="number|numberDecimal" 
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
-                        <EditText
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
                     </TableRow>
 
                     <TableRow
@@ -178,6 +174,7 @@
                          >
 
                         <Spinner
+                            android:id="@+id/Button3_spinner3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:entries="@array/array2"
@@ -185,6 +182,7 @@
                             android:prompt="@string/tip" />
 
                         <Spinner
+                            android:id="@+id/Button3_spinner4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@android:color/black"
@@ -192,20 +190,22 @@
                             android:prompt="@string/tip" />
 
                         <EditText
+                            android:id="@+id/Button3_et4"
+                            android:inputType="number|numberDecimal" 
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <EditText
+                            android:id="@+id/Button3_et5"
+                            android:inputType="number|numberDecimal" 
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
                         <EditText
+                            android:id="@+id/Button3_et6"
+                            android:inputType="number|numberDecimal" 
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
-                        <EditText
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-                        <EditText
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
                     </TableRow>
 
                     <TableRow
@@ -214,6 +214,7 @@
                         >
 
                         <Spinner
+                            android:id="@+id/Button3_spinner5"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:entries="@array/array2"
@@ -221,6 +222,7 @@
                             android:prompt="@string/tip" />
 
                         <Spinner
+                            android:id="@+id/Button3_spinner6"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@android:color/black"
@@ -228,20 +230,22 @@
                             android:prompt="@string/tip" />
 
                         <EditText
+                            android:id="@+id/Button3_et7"
+                            android:inputType="number|numberDecimal" 
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
                         <EditText
+                            android:id="@+id/Button3_et8"
+                            android:inputType="number|numberDecimal" 
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <EditText
+                            android:id="@+id/Button3_et9"
+                            android:inputType="number|numberDecimal" 
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
-                        <EditText
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-                        <EditText
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
                     </TableRow>
 
                     <TableRow
@@ -250,6 +254,7 @@
                         >
 
                         <Spinner
+                            android:id="@+id/Button3_spinner7"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:entries="@array/array2"
@@ -257,25 +262,29 @@
                             android:prompt="@string/tip" />
 
                         <Spinner
+                            android:id="@+id/Button3_spinner8"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@android:color/black"
                             android:entries="@array/array3"
                             />
 
+                      
                         <EditText
+                            android:id="@+id/Button3_et10"
+                            android:inputType="number|numberDecimal" 
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
                         <EditText
+                            android:id="@+id/Button3_et11"
+                            android:inputType="number|numberDecimal" 
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
 
                         <EditText
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-                        <EditText
+                            android:id="@+id/Button3_et12"
+                            android:inputType="number|numberDecimal" 
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                     </TableRow>
@@ -288,7 +297,7 @@
                     android:layout_marginTop="5dp"
                     android:background="@drawable/shape"
                     android:padding="8dp"
-                    android:text="功能介绍：\n先选择还款方式，然后输入相应的数据就可以进行计算"
+                    android:text="功能介绍：\n先选择产品类型，\n然后才可以输入相应的数据"
                     android:textColor="#1E90FF"
                     android:textSize="18sp" />
 
