--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="金融计算器"
+            android:text="市场先生期权版"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
     </RelativeLayout>
