--- a/res/layout/learn.xml
+++ b/res/layout/learn.xml
@@ -41,8 +41,9 @@
     <ExpandableListView
         android:id="@id/android:list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" 
+        android:layout_height="wrap_content" 
         android:layout_margin="10dp"
+        android:divider="@android:color/darker_gray" 
         android:dividerHeight="0.5dp"
         android:cacheColorHint="#00000000" 
         >
