--- a/res/layout/viewpage.xml
+++ b/res/layout/viewpage.xml
@@ -7,12 +7,12 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="wrap_content" >
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vp"
-            android:layout_width="512dp"
-            android:layout_height="288dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
