自我测试的UI界面最终版

--- a/res/layout/testing_item.xml
+++ b/res/layout/testing_item.xml
@@ -2,41 +2,53 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    <TextView
-        android:id="@+id/textview1"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="问题：XXXXXXX\nXXXXXXX"
-        android:textColor="@android:color/black"
-        android:textSize="16sp" />
+        android:background="@drawable/shape1"
+        android:orientation="vertical" >
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textview1" >
-
-        <RadioButton
+        <TextView
+            android:id="@+id/textview1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="A.选项一" />
+            android:padding="5dp"
+            android:text="问题：XXXXXXX\nXXXXXXX"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
 
-        <RadioButton
+        <RadioGroup
+            android:id="@+id/radioGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="B.选项二" />
+            android:layout_below="@+id/textview1" >
 
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="C.选项三" />
+            <RadioButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="A.选项一"
+                android:textColor="@android:color/black" />
 
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="D.选项四" />
-    </RadioGroup>
+            <RadioButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="B.选项二"
+                android:textColor="@android:color/black" />
+
+            <RadioButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="C.选项三"
+                android:textColor="@android:color/black" />
+
+            <RadioButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="D.选项四"
+                android:textColor="@android:color/black" />
+        </RadioGroup>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textview3"
@@ -51,7 +63,8 @@
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
-        android:layout_height="100dp" 
-        android:layout_alignParentBottom="true"/>
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:textColor="@android:color/black" />
 
 </RelativeLayout>
