--- a/res/layout/testing.xml
+++ b/res/layout/testing.xml
@@ -36,6 +36,7 @@
             android:text="测试题共10题"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
+
         <ImageButton
             android:id="@+id/testing_collect_bn"
             android:layout_width="40dp"
@@ -52,24 +53,13 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="12dp"
-            android:background="@drawable/testing_discollect"/>
+            android:background="@drawable/testing_discollect" />
     </RelativeLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp" >
-
-        <android.support.v4.view.PagerTitleStrip
-            android:id="@+id/pagertitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:textColor="@android:color/black" >
-        </android.support.v4.view.PagerTitleStrip>
+        android:layout_height="match_parent" >
     </android.support.v4.view.ViewPager>
 
 </LinearLayout>
