--- a/res/layout/testing_item1.xml
+++ b/res/layout/testing_item1.xml
@@ -1,13 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:gravity="center_vertical|center_horizontal">
+    android:layout_height="match_parent"
+    android:gravity="center_vertical|center_horizontal"
+    android:orientation="vertical" >
+
+    <TextView
+        android:id="@+id/testing_item1_tv"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/shape"
+        android:padding="8dp"
+        android:text="你一共答对了6题\n你的分数是60分。"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:visibility="gone" />
 
     <Button
+        android:id="@+id/testing_item1_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="提交并查看成绩" 
-        android:textColor="@color/black"/>
+        android:text="提交并查看成绩"
+        android:textColor="@color/black" />
+
+    <Button
+        android:id="@+id/testing_item1_btn1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="返回查看具体的答题情况"
+        android:textColor="@color/black"
+        android:visibility="gone" />
 
 </LinearLayout>
